2009-02-17 Pierre Wieser <pwieser@trychlos.org>

	* src/api/na-iduplicable.h:
	* src/api/na-object-api.h:
	* src/api/na-object-item.h:
	* src/core/na-exporter.c:
	* src/core/na-exporter.h:
	* src/core/na-iduplicable.c:
	* src/core/na-object-item.c:
	* src/nact/Makefile.am:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-clipboard.c:
	* src/nact/nact-clipboard.h:
	* src/nact/nact-confirm-logout.c:
	* src/nact/nact-export-ask.c:
	* src/nact/nact-export-format.c:
	* src/nact/nact-export-format.h:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-main-menubar.h:
	* src/nact/nact-assistant-export.c:
	* src/nact/nact-assistant-export.h:
	* src/nact/nact-assistant-export.ui:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-import-ask.c:
	* src/nact/nact-import-ask.h:
	* src/nact/nact-iprefs.c:
	* src/nact/nact-iprefs.h:
	* src/nact/nact-tree-model.h: Update Nact classes.

	Refactor: move all XML code to src/io-xml plugin.

	* src/nact/Makefile.am:
	* src/nact/base-application-class.h:
	* src/nact/base-assistant.h:
	* src/nact/base-assistant.h:
	* src/nact/base-builder.h:
	* src/nact/base-dialog.h:
	* src/nact/base-iprefs.c:
	* src/nact/base-window-class.h:	Update typo in Base class headers.

	* src/core/na-importer.c:
	* src/core/na-importer.h: New files.

	* src/core/Makefile.am:
	* src/core/na-iimporter.c:
	* src/core/na-io-provider.c:
	* src/core/na-iprefs.h: Update core library.

	* src/nact/nact-export-format.h:
	* src/nact/nact-export-format.c:
	* src/core/na-exporter.h:
	* src/core/na-exporter.c: Update export treatements.

	* src/api/na-iexporter.h:
	* src/core/na-iexporter.c:
	* src/io-xml/naxml-module.c:
	* src/io-xml/naxml-provider.c: Update NAIExporter interface.

	Define NAExportFormat new class.

	* src/core/na-export-format.c:
	* src/core/na-export-format.h: New files.

	Rename src/nact/nact-assistant-export-ask.{c,h} to
	src/nact/nact-export-ask.{c,h}

2009-02-15 Pierre Wieser <pwieser@trychlos.org>

	Now install defined ids in docdir.
