@@ -42,7 +42,7 @@
 
 #include <api/na-object-item.h>
 
-#include <core/na-updater.h>
+/* #include <core/na-updater.h> */
 
 #include "base-window.h"
 
@@ -73,9 +73,11 @@ typedef struct {
 
 GType      nact_window_get_type( void );
 
-NAUpdater *nact_window_get_updater( NactWindow *window );
+/* NAUpdater *nact_window_get_updater( NactWindow *window ); */
 
 gboolean   nact_window_has_writable_providers( NactWindow *window );
+
+gboolean   nact_window_is_item_writable( const NactWindow *window, const NAObjectItem *item, guint *reason );
 
 gboolean   nact_window_save_item  ( NactWindow *window, NAObjectItem *item );
 gboolean   nact_window_delete_item( NactWindow *window, const NAObjectItem *item );
